# MeshViewerFramework

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenMesh.cmake  UtilFindLib.cmake
src/: Main.cpp
src/command/: BaseCommand.cpp  BaseCommand.h  BiharmonicNormalClusteringCommand.cpp  BiharmonicNormalClusteringCommand.h  CommandParameters.cpp  CommandParameters.h  Commands.h  DefaultShadingCommand.cpp  DefaultShadingCommand.h  DemoCommand.cpp  DemoCommand.h  ExportLabelDataCommand.cpp  ExportLabelDataCommand.h  ExportSeamDataCommand.cpp  ExportSeamDataCommand.h  FindExtremePoiintsCommand.cpp  FindExtremePoiintsCommand.h  FlipNormalCommand.cpp  FlipNormalCommand.h  GreedyFloodingCommand.cpp  GreedyFloodingCommand.h  ImportLabelDataCommand.cpp  ImportLabelDataCommand.h  KHarmonicFieldCommand.cpp  KHarmonicFieldCommand.h  KRegionFloodingCommand.cpp  KRegionFloodingCommand.h  LambertShaderCommand.cpp  LambertShaderCommand.h  LaplacianSmoothingCommand.cpp  LaplacianSmoothingCommand.h  LoadCommand.cpp  LoadCommand.h  NoiseCommand.cpp  NoiseCommand.h  NormalColorCommand.cpp  NormalColorCommand.h  NormalKmeansCommand.cpp  NormalKmeansCommand.h  NormalShaderCommand.cpp  (+31 more)
src/core/: BiharmonicSmoothing.cpp  BiharmonicSmoothing.h  BoundingBox.cpp  BoundingBox.h  ClusterGraph.cpp  ClusterGraph.h  ColorMap.cpp  ColorMap.h  EigenSolver.cpp  EigenSolver.h  EigenUtil.cpp  EigenUtil.h  GreedyFlooding.cpp  GreedyFlooding.h  HieerarchicalClustering.cpp  HieerarchicalClustering.h  IsolatedCluster.cpp  IsolatedCluster.h  KHarmonicField.cpp  KHarmonicField.h  KMeans.cpp  KMeans.h  KRegionFlooding.cpp  KRegionFlooding.h  ListUtil.cpp  ListUtil.h  MeshColorSet.cpp  MeshColorSet.h  MeshData.h  MeshMatrix.cpp  MeshMatrix.h  NormalClustering.cpp  NormalClustering.h  NormalColor.cpp  NormalColor.h  NormalSampling.cpp  NormalSampling.h  PointOnMesh.cpp  PointOnMesh.h  PrimitiveFitting.cpp  (+12 more)
src/io/: MatrixIO.cpp  MatrixIO.h  ObjIO.cpp  ObjIO.h
src/scene/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  LabelData.cpp  LabelData.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Project.cpp  Project.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SelectionInfo.cpp  SelectionInfo.h  ShaderObject.cpp  ShaderObject.h
src/shader/: BaseOverlay.cpp  BaseOverlay.h  CoordinateSystemOverlay.cpp  CoordinateSystemOverlay.h  NormalVectorOverlay.cpp  NormalVectorOverlay.h  Overlays.h  PointsOverlay.cpp  PointsOverlay.h  SceneInfoOverlay.cpp  SceneInfoOverlay.h  ShaderProgram.cpp  ShaderProgram.h  TextureOverlay.cpp  TextureOverlay.h  WireframeOverlay.cpp  WireframeOverlay.h
src/tool/: BaseTool.cpp  BaseTool.h  CameraTool.cpp  CameraTool.h  SelectTool.cpp  SelectTool.h
src/ui/: CommandParameterUI.cpp  CommandParameterUI.h  GLView.cpp  GLView.h  MainWindow.cpp  MainWindow.h  MenuGroup.cpp  MenuGroup.h  ModelView.cpp  ModelView.h
src/util/: Logger.cpp  Logger.h
